--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,8 @@
   box-sizing: border-box;
   text-align: center;
   margin: 0 auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 header, div, footer  {
   outline: solid 1px darkgray; 
@@ -12,7 +14,11 @@ header, div, footer  {
 @media only screen and (min-width: 768px) {
   #contain {
       width: 960px;
-      margin-left: 10%;
-      margin-top: 5%;
+  }
+  main {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    display: flex;
+    align-items: center;
   }
 }
