--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,7 +7,7 @@
   line-height: 150px;
 }
 #c, #d {
-  height: 150px;
+  height: 125px;
   line-height: 150px;
 }
 #e, #f, #g, #h {
@@ -17,8 +17,10 @@
   line-height: 250px
 }
 #i > footer {
-  height: 100px;
-  line-height: 100px;
+  height: 80px;
+}
+#i {
+  line-height: 80px;
 }
 @media only screen and (min-width: 768px) {
   div {
