--- a/styles/modules.css
+++ b/styles/modules.css
@@ -24,22 +24,7 @@
     height: 200px;
     line-height: 200px;
   }
-  #e {
-    width: 190px;
-    height: 250px;
-    line-height: 250px;
-  }
-  #f {
-    width: 190px;
-    height: 250px;
-    line-height: 250px;
-  }
-  #g {
-    width: 190px;
-    height: 250px;
-    line-height: 250px;
-  }
-  #h {
+  #e, #f, #g, #h {
     width: 190px;
     height: 250px;
     line-height: 250px;
